--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "backend-youtube",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "upload.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node upload.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "googleapis": "^148.0.0",
-    "multer": "^1.4.5-lts.2"
+    "firebase-admin": "^11.10.1"
   }
 }
