--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "backend-youtube",
   "version": "1.0.0",
-  "main": "upload.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node upload.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5",
     "cors": "^2.8.5",
     "firebase-admin": "^11.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
